<resources>
    <string name="app_name">TaskManagement</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="login_here">Login Here</string>
    <string name="welcome_msg">Welcome back you\'ve been missed</string>
    <string name="forget_your_password">Forget your password?</string>
    <string name="create_new_account">Create new account</string>
    <string name="sign_in">Sign in</string>
    <string name="create_account">Create Account</string>
    <string name="create_an_account_so_you_can_explore_all_the_existing_jobs">Create an account so you can explore all the existing jobs</string>
    <string name="password">Password</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="welcome_title">Simplify Your Daily Task</string>
    <string name="welcome_content">Find and organise your to-dos and tasks to make your day more managable and stress-free</string>
    <string name="tasks">Tasks</string>
    <string name="categories">Categories</string>
    <string name="calendar">Calendar</string>
    <string name="setting">Setting</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description">Description</string>
    <string name="completed">Completed</string>
    <string name="to_do">To Do</string>
    <string name="sign_out">Sign Out</string>
    <string name="add_task">Add Task</string>
    <string name="select_due_time">Select Due Time</string>
    <string name="select_due_date">Select due date</string>
    <string name="task_title">Task title</string>
    <string name="task_description">Task Description</string>
    <string name="choose_your_preferred_language">Choose your preferred language</string>
    <string name="select_app_color_scheme">Select app color scheme</string>
    <string name="default_reminder">Default Reminder</string>
    <string name="set_reminder_time_before_task_deadline">Set reminder time before task deadline</string>
    <string name="language">Language</string>
    <string name="backup_tasks">Backup Tasks</string>
    <string name="backup_tasks_summary">Click to backup your tasks to a JSON file</string>
    <string name="loading_tasks">Loading tasks...</string>
    <string name="tasks_have_been_backed_up_successfully">Tasks have been backed up successfully!</string>
    <string name="unsynced_tasks">Unsynced Tasks</string>
    <string name="unsynced_tasks_summary">%1$d tasks pending sync</string>
    <string name="implicit_intent">Implicit Intent</string>
    <string name="open_rupp_website">📖 Open RUPP Website</string>
    <string name="view_location">📍 View Location</string>
    <string name="take_a_photo">📸 Take a Photo</string>
    <string name="share_text">📤 Share Text</string>
    <string name="pick_an_image">📂 Pick an Image</string>
    <string name="dial_a_phone_number">📞 Dial a Phone Number</string>
    <string name="new_task">New Task</string>
    <string name="show_basic_notification">Show Basic Notification</string>
    <string name="show_bigtextstyle_notification">Show BigTextStyle Notification</string>
    <string name="show_bigpicturestyle_notification">Show BigPictureStyle Notification</string>
    <string name="show_notification_with_action">Show Notification with Action</string>
    <string name="test_notification">Test Notification</string>
    <string name="run_thread_handler">Run Thread + Handler</string>
    <string name="start_startedservice">Generating Report (StartedService)</string>
    <string name="start_foregroundservice">Start ForegroundService</string>
    <string name="enqueue_workmanager">Enqueue WorkManager</string>
    <string name="log_n">Log:\n</string>
    <string name="demo_background_processing">Demo Background Processing</string>
    <string name="upload_logs_wifi">Upload Logs (WiFi)</string>
    <string name="schedule_periodic_quote_generate">Schedule Periodic Quote Generate</string>
    <string name="start_music_foreground_service">Start Music (Foreground Service)</string>
    <string name="start_file_upload_startedservice">Start file upload (StartedService)</string>
</resources>