<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:id="@+id/demoLayout"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:padding="16dp">

<Button
    android:id="@+id/btn_thread_handler"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/run_thread_handler" />

<Button
    android:id="@+id/btn_started_service"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/start_startedservice"
    android:layout_marginTop="8dp" />

<Button
    android:id="@+id/btn_foreground_service"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/start_foregroundservice"
    android:layout_marginTop="8dp" />

<Button
    android:id="@+id/btn_work_manager"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/enqueue_workmanager"
    android:layout_marginTop="8dp" />

<TextView
    android:id="@+id/log_view"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:textSize="14sp"
    android:background="#EEEEEE"
    android:padding="8dp"
    android:text="@string/log_n" />
</LinearLayout>